--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./fonts/fonts.css">
   <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="icon" href="./images/favicon.ico">
   <title>С чистого листа</title>
 </head>
-<body>
+<body class="content">
 </body>
 </html>
