[Feature] Created site header

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
   <title>С чистого листа</title>
 </head>
 <body class="content">
+  <header class="header">
+    <img class="header__logo"
+         src="./images/logo.svg"
+         alt="Логотип проекта Вёрстка">
+    <nav class="header__menu">
+      <a class="header__link header__link_active" href="#">Главная</a>
+      <a class="header__link" href="#">О нас</a>
+      <a class="header__link" href="#">Контакты</a>
+    </nav>
+  </header>
 </body>
 </html>
