[Refactor] Renamed CSS class for `body`

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="./images/favicon.ico">
   <title>С чистого листа</title>
 </head>
-<body class="content">
+<body class="global">
   <header class="header">
     <img class="header__logo"
          src="./images/logo.svg"
