--- a/index.html
+++ b/index.html
@@ -9,15 +9,34 @@
   <title>С чистого листа</title>
 </head>
 <body class="global">
-  <header class="header">
-    <img class="header__logo"
+  <header class="content content_theme_dark header">
+    <a>
+      <img class="header__logo"
          src="./images/logo.svg"
          alt="Логотип проекта Вёрстка">
+    </a>
     <nav class="header__menu">
-      <a class="header__link header__link_active" href="#">Главная</a>
-      <a class="header__link" href="#">О нас</a>
-      <a class="header__link" href="#">Контакты</a>
+      <ul class="header__menu-list">
+        <li class="header__menu-item header__menu-item_active">
+          <a class="header__menu-link" href="#0">Главная</a>
+        </li>
+        <li class="header__menu-item">
+          <a class="header__menu-link" href="#">О нас</a>
+        </li>
+        <li class="header__menu-item">
+          <a class="header__menu-link" href="#">Контакты</a>
+        </li>
+      </ul>
     </nav>
   </header>
+  <main>
+    <section class="content content_theme_dark cover">
+      <h1 class="cover__title">
+        <span class="accent-span">С</span>
+        <span class="accent-span text-center">чистого</span>
+        <span class="accent-span text-right">листа</span>
+      </h1>
+    </section>
+  </main>
 </body>
 </html>
