--- a/index.html
+++ b/index.html
@@ -75,7 +75,61 @@
         </li>
       </ul>
     </section>
-    <section class="content content_theme_dark how-to"></section>
+    <section class="content content_theme_dark how-to">
+      <h3 class="content__section-subtitle">
+        <span class="accent-span text-right">Как всё-таки начать</span>
+        <span class="accent-span">что-то делать</span>
+      </h3>
+      <p class="content__section-intro">
+        Чаще всего страх чистого листа появляется не из-за чего-то одного, а из-за совокупности нескольких факторов. Вот что может помочь:
+      </p>
+      <ul class="cards-list">
+        <li class="card__list-item">
+          <article class="card card_theme_dark">
+            <header class="card__author">
+              <img class="card__author-photo"
+                   src="./images/polyarinov.png"
+                   alt="Фотография Алексея Поляринова">
+              <p class="card__author-name">Алексей Поляринов</p>
+            </header>
+            <div class="card__content">
+              <h4 class="card__title">Начать любыми словами</h4>
+              <p class="card__text">
+                Любыми — без шуток. Если не верите нам, посмотрите, например, чем открывается эссе Алексея Поляринова «Чарли Кауфман: расширение пространства». Можно и менее радикально. Главное, чтобы пустую страницу начали заполнять символы. Получится своеобразная ловушка для мозга: он видит, что вы уже начали что-то делать, и ему становится легче войти в состояние потока.
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="card__list-item">
+          <article class="card card_theme_bright">
+            <div class="card__content">
+              <h4 class="card__title">
+                Поставить перед собой рамку для фотографии
+              </h4>
+              <p class="card__text">
+                Самую обычную: 10 на 15 сантиметров. Уже от одного ощущения, что предстоит работа над большой и сложной задачей, может пропасть всякое желание за неё браться. В такие моменты хорошо помогает загнать задачу в рамки — в прямом смысле. Сосредоточьтесь на том, чтобы заполнить только пространство 10х15 сантиметров. Что дальше — пока неважно.
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="card__list-item">
+          <article class="card card_theme_dark">
+            <header class="card__author">
+              <img class="card__author-photo"
+                   src="./images/bunin.png"
+                   alt="Фотография Ивана Бунина">
+              <p class="card__author-name">Иван Бунин</p>
+            </header>
+            <div class="card__content">
+              <h4 class="card__title">Начать любыми словами</h4>
+              <p class="card__text">
+                «Писать стихи нужно каждый день, подобно тому как скрипач или пианист непременно должен каждый день без пропусков по нескольку часов играть на своём инструменте. В противном случае ваш талант неизбежно оскудеет, высохнет, подобно колодцу, откуда долгое время не берут воду. А о чём писать? О чём угодно. Если у вас в данное время нет никакой темы, идеи, то пишите просто обо всём, что увидите», — такой совет своему приятелю дал Иван Бунин. Нет повода ему не следовать.
+              </p>
+            </div>
+          </article>
+        </li>
+      </ul>
+    </section>
   </main>
   <footer class="content content_theme_dark footer"></footer>
 </body>
