[Final] Made footer. Site is ready to review.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,22 @@
       </ul>
     </section>
   </main>
-  <footer class="content content_theme_dark footer"></footer>
+  <footer class="content content_theme_dark footer">
+    <p class="footer__copyright">&copy VЁRSTKA</p>
+    <ul class="footer__links">
+      <li class="footer__item">
+        <a target=_blank
+           href="http://vk.com"
+           class="footer__link">ВК
+        </a>
+      </li>
+      <li class="footer__item">
+        <a target=_blank
+           href="https://youtube.com"
+           class="footer__link">Ютуб
+        </a>
+      </li>
+    </ul>
+  </footer>
 </body>
 </html>
