--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </section>
   </main>
   <footer class="content content_theme_dark footer">
-    <p class="footer__copyright">&copy VЁRSTKA</p>
+    <p class="footer__copyright">&copy; VЁRSTKA</p>
     <ul class="footer__links">
       <li class="footer__item">
         <a target=_blank
