[Hotfix] Corrected last card caption

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <p class="card__author-name">Иван Бунин</p>
             </header>
             <div class="card__content">
-              <h4 class="card__title">Начать любыми словами</h4>
+              <h4 class="card__title">Сделать из задачи рутину</h4>
               <p class="card__text">
                 «Писать стихи нужно каждый день, подобно тому как скрипач или пианист непременно должен каждый день без пропусков по нескольку часов играть на своём инструменте. В противном случае ваш талант неизбежно оскудеет, высохнет, подобно колодцу, откуда долгое время не берут воду. А о чём писать? О чём угодно. Если у вас в данное время нет никакой темы, идеи, то пишите просто обо всём, что увидите», — такой совет своему приятелю дал Иван Бунин. Нет повода ему не следовать.
               </p>
